# Nachos_Offline

./: CMakeLists.txt  README.md
Offline 1/nachos_64bit/code/filesys/: nachos
Offline 1/nachos_64bit/code/network/: Makefile  nachos
Offline 1/nachos_64bit/code/threads/: buffer.h  consumer.cc  consumer.h  nachos  producer.cc  synch.cc  threadtest.cc
Offline 1/nachos_64bit/code/userprog/: nachos
Offline 1/nachos_64bit/code/vm/: Makefile  nachos
Offline 2/Nachos-2 Assignment/: Nachos2_Assignment.docx
Offline 2/nachos_64bit/code/: Makefile.common
Offline 2/nachos_64bit/code/filesys/: Makefile  nachos
Offline 2/nachos_64bit/code/network/: Makefile  nachos
Offline 2/nachos_64bit/code/test/: Makefile  echo.c  newtest  newtest.c  newtest.coff  shell  shell.c  shell.coff
Offline 2/nachos_64bit/code/threads/: nachos  system.cc  system.h  thread.h
Offline 2/nachos_64bit/code/userprog/: Makefile  addrspace.cc  addrspace.h  exception.cc  memory_manager.h  nachos  progtest.cc  spaceid_generator.cc  spaceid_generator.h  synch_console.cc  synch_console.h  table.cc
Offline 2/nachos_64bit/code/vm/: Makefile  nachos
Offline 3/nachos_64bit/code/: Makefile.common
Offline 3/nachos_64bit/code/filesys/: Makefile  nachos
Offline 3/nachos_64bit/code/machine/: console.h  machine.cc  machine.h  mipssim.cc  translate.cc  translate.h
Offline 3/nachos_64bit/code/network/: Makefile  nachos
Offline 3/nachos_64bit/code/test/: Makefile  array.c  matmult.c  shell.c
Offline 3/nachos_64bit/code/threads/: Makefile  main.cc  nachos  producer.h  synch.h  system.cc  system.h
Offline 3/nachos_64bit/code/userprog/: Makefile  addrspace.cc  addrspace.h  exception.cc  memory_manager.cc  memory_manager.h  nachos  progtest.cc  swap_page.cc  swap_page.h  synch_console.cc  table.h
Offline 3/nachos_64bit/code/vm/: Makefile  nachos
Offline 4/Nachos-2 Assignment/: CSE 120 -- Nachos Project 2_ Multiprogramming.html  addrspace.html  exec.html
Offline 4/nachos_64bit/code/: Makefile.common
Offline 4/nachos_64bit/code/filesys/: Makefile  filesys.h  nachos
Offline 4/nachos_64bit/code/machine/: machine.cc
Offline 4/nachos_64bit/code/network/: Makefile  nachos
Offline 4/nachos_64bit/code/test/: Makefile
Offline 4/nachos_64bit/code/threads/: nachos  system.cc  system.h
Offline 4/nachos_64bit/code/userprog/: Makefile  addrspace.cc  addrspace.h  memory_manager.cc  memory_manager.h  nachos  progtest.cc
Offline 4/nachos_64bit/code/vm/: Makefile  nachos
