cmake_minimum_required(VERSION 3.9)
project(Nachos_Offline)

set(CMAKE_CXX_STANDARD 11)

add_executable(Nachos_Offline
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/Nachos_Offline.cbp
        "Offline 3/nachos_64bit/code/bin/coff.h"
        "Offline 3/nachos_64bit/code/bin/coff2flat.c"
        "Offline 3/nachos_64bit/code/bin/coff2noff.c"
        "Offline 3/nachos_64bit/code/bin/d.c"
        "Offline 3/nachos_64bit/code/bin/disasm.c"
        "Offline 3/nachos_64bit/code/bin/encode.h"
        "Offline 3/nachos_64bit/code/bin/execute.c"
        "Offline 3/nachos_64bit/code/bin/instr.h"
        "Offline 3/nachos_64bit/code/bin/int.h"
        "Offline 3/nachos_64bit/code/bin/main.c"
        "Offline 3/nachos_64bit/code/bin/Makefile"
        "Offline 3/nachos_64bit/code/bin/noff.h"
        "Offline 3/nachos_64bit/code/bin/opstrings.c"
        "Offline 3/nachos_64bit/code/bin/out.c"
        "Offline 3/nachos_64bit/code/bin/system.c"
        "Offline 3/nachos_64bit/code/filesys/test/big"
        "Offline 3/nachos_64bit/code/filesys/test/medium"
        "Offline 3/nachos_64bit/code/filesys/test/small"
        "Offline 3/nachos_64bit/code/filesys/directory.cc"
        "Offline 3/nachos_64bit/code/filesys/directory.h"
        "Offline 3/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 3/nachos_64bit/code/filesys/filehdr.h"
        "Offline 3/nachos_64bit/code/filesys/filesys.cc"
        "Offline 3/nachos_64bit/code/filesys/filesys.h"
        "Offline 3/nachos_64bit/code/filesys/fstest.cc"
        "Offline 3/nachos_64bit/code/filesys/Makefile"
        "Offline 3/nachos_64bit/code/filesys/openfile.cc"
        "Offline 3/nachos_64bit/code/filesys/openfile.h"
        "Offline 3/nachos_64bit/code/filesys/swtch.s"
        "Offline 3/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 3/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 3/nachos_64bit/code/machine/console.cc"
        "Offline 3/nachos_64bit/code/machine/console.h"
        "Offline 3/nachos_64bit/code/machine/disk.cc"
        "Offline 3/nachos_64bit/code/machine/disk.h"
        "Offline 3/nachos_64bit/code/machine/interrupt.cc"
        "Offline 3/nachos_64bit/code/machine/interrupt.h"
        "Offline 3/nachos_64bit/code/machine/machine.cc"
        "Offline 3/nachos_64bit/code/machine/machine.h"
        "Offline 3/nachos_64bit/code/machine/mipssim.cc"
        "Offline 3/nachos_64bit/code/machine/mipssim.h"
        "Offline 3/nachos_64bit/code/machine/network.cc"
        "Offline 3/nachos_64bit/code/machine/network.h"
        "Offline 3/nachos_64bit/code/machine/stats.cc"
        "Offline 3/nachos_64bit/code/machine/stats.h"
        "Offline 3/nachos_64bit/code/machine/sysdep.cc"
        "Offline 3/nachos_64bit/code/machine/sysdep.h"
        "Offline 3/nachos_64bit/code/machine/timer.cc"
        "Offline 3/nachos_64bit/code/machine/timer.h"
        "Offline 3/nachos_64bit/code/machine/translate.cc"
        "Offline 3/nachos_64bit/code/machine/translate.h"
        "Offline 3/nachos_64bit/code/network/Makefile"
        "Offline 3/nachos_64bit/code/network/nettest.cc"
        "Offline 3/nachos_64bit/code/network/post.cc"
        "Offline 3/nachos_64bit/code/network/post.h"
        "Offline 3/nachos_64bit/code/network/README"
        "Offline 3/nachos_64bit/code/network/swtch.s"
        "Offline 3/nachos_64bit/code/test/halt.c"
        "Offline 3/nachos_64bit/code/test/Makefile"
        "Offline 3/nachos_64bit/code/test/matmult.c"
        "Offline 3/nachos_64bit/code/test/script"
        "Offline 3/nachos_64bit/code/test/shell.c"
        "Offline 3/nachos_64bit/code/test/sort.c"
        "Offline 3/nachos_64bit/code/test/start.s"
        "Offline 3/nachos_64bit/code/threads/buffer.h"
        "Offline 3/nachos_64bit/code/threads/consumer.cc"
        "Offline 3/nachos_64bit/code/threads/consumer.h"
        "Offline 3/nachos_64bit/code/threads/copyright.h"
        "Offline 3/nachos_64bit/code/threads/list.h"
        "Offline 3/nachos_64bit/code/threads/main.cc"
        "Offline 3/nachos_64bit/code/threads/Makefile"
        "Offline 3/nachos_64bit/code/threads/preemptive.cc"
        "Offline 3/nachos_64bit/code/threads/preemptive.h"
        "Offline 3/nachos_64bit/code/threads/producer.cc"
        "Offline 3/nachos_64bit/code/threads/producer.h"
        "Offline 3/nachos_64bit/code/threads/scheduler.cc"
        "Offline 3/nachos_64bit/code/threads/scheduler.h"
        "Offline 3/nachos_64bit/code/threads/switch.h"
        "Offline 3/nachos_64bit/code/threads/switch.s"
        "Offline 3/nachos_64bit/code/threads/swtch.s"
        "Offline 3/nachos_64bit/code/threads/synch.cc"
        "Offline 3/nachos_64bit/code/threads/synch.h"
        "Offline 3/nachos_64bit/code/threads/synchlist.h"
        "Offline 3/nachos_64bit/code/threads/system.cc"
        "Offline 3/nachos_64bit/code/threads/system.h"
        "Offline 3/nachos_64bit/code/threads/thread.cc"
        "Offline 3/nachos_64bit/code/threads/thread.h"
        "Offline 3/nachos_64bit/code/threads/threadtest.cc"
        "Offline 3/nachos_64bit/code/threads/utility.cc"
        "Offline 3/nachos_64bit/code/threads/utility.h"
        "Offline 3/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 3/nachos_64bit/code/userprog/addrspace.h"
        "Offline 3/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 3/nachos_64bit/code/userprog/bitmap.h"
        "Offline 3/nachos_64bit/code/userprog/exception.cc"
        "Offline 3/nachos_64bit/code/userprog/Makefile"
        "Offline 3/nachos_64bit/code/userprog/progtest.cc"
        "Offline 3/nachos_64bit/code/userprog/swtch.s"
        "Offline 3/nachos_64bit/code/userprog/syscall.h"
        "Offline 3/nachos_64bit/code/vm/Makefile"
        "Offline 3/nachos_64bit/code/vm/swtch.s"
        "Offline 3/nachos_64bit/code/Makefile"
        "Offline 3/nachos_64bit/code/Makefile.common"
        "Offline 3/nachos_64bit/code/Makefile.dep"
        "Offline 4/nachos_64bit/code/bin/coff.h"
        "Offline 4/nachos_64bit/code/bin/coff2flat.c"
        "Offline 4/nachos_64bit/code/bin/coff2noff.c"
        "Offline 4/nachos_64bit/code/bin/d.c"
        "Offline 4/nachos_64bit/code/bin/disasm.c"
        "Offline 4/nachos_64bit/code/bin/encode.h"
        "Offline 4/nachos_64bit/code/bin/execute.c"
        "Offline 4/nachos_64bit/code/bin/instr.h"
        "Offline 4/nachos_64bit/code/bin/int.h"
        "Offline 4/nachos_64bit/code/bin/main.c"
        "Offline 4/nachos_64bit/code/bin/Makefile"
        "Offline 4/nachos_64bit/code/bin/noff.h"
        "Offline 4/nachos_64bit/code/bin/opstrings.c"
        "Offline 4/nachos_64bit/code/bin/out.c"
        "Offline 4/nachos_64bit/code/bin/system.c"
        "Offline 4/nachos_64bit/code/filesys/test/big"
        "Offline 4/nachos_64bit/code/filesys/test/medium"
        "Offline 4/nachos_64bit/code/filesys/test/small"
        "Offline 4/nachos_64bit/code/filesys/directory.cc"
        "Offline 4/nachos_64bit/code/filesys/directory.h"
        "Offline 4/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 4/nachos_64bit/code/filesys/filehdr.h"
        "Offline 4/nachos_64bit/code/filesys/filesys.cc"
        "Offline 4/nachos_64bit/code/filesys/filesys.h"
        "Offline 4/nachos_64bit/code/filesys/fstest.cc"
        "Offline 4/nachos_64bit/code/filesys/Makefile"
        "Offline 4/nachos_64bit/code/filesys/openfile.cc"
        "Offline 4/nachos_64bit/code/filesys/openfile.h"
        "Offline 4/nachos_64bit/code/filesys/swtch.s"
        "Offline 4/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 4/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 4/nachos_64bit/code/machine/console.cc"
        "Offline 4/nachos_64bit/code/machine/console.h"
        "Offline 4/nachos_64bit/code/machine/disk.cc"
        "Offline 4/nachos_64bit/code/machine/disk.h"
        "Offline 4/nachos_64bit/code/machine/interrupt.cc"
        "Offline 4/nachos_64bit/code/machine/interrupt.h"
        "Offline 4/nachos_64bit/code/machine/machine.cc"
        "Offline 4/nachos_64bit/code/machine/machine.h"
        "Offline 4/nachos_64bit/code/machine/mipssim.cc"
        "Offline 4/nachos_64bit/code/machine/mipssim.h"
        "Offline 4/nachos_64bit/code/machine/network.cc"
        "Offline 4/nachos_64bit/code/machine/network.h"
        "Offline 4/nachos_64bit/code/machine/stats.cc"
        "Offline 4/nachos_64bit/code/machine/stats.h"
        "Offline 4/nachos_64bit/code/machine/sysdep.cc"
        "Offline 4/nachos_64bit/code/machine/sysdep.h"
        "Offline 4/nachos_64bit/code/machine/timer.cc"
        "Offline 4/nachos_64bit/code/machine/timer.h"
        "Offline 4/nachos_64bit/code/machine/translate.cc"
        "Offline 4/nachos_64bit/code/machine/translate.h"
        "Offline 4/nachos_64bit/code/network/Makefile"
        "Offline 4/nachos_64bit/code/network/nettest.cc"
        "Offline 4/nachos_64bit/code/network/post.cc"
        "Offline 4/nachos_64bit/code/network/post.h"
        "Offline 4/nachos_64bit/code/network/README"
        "Offline 4/nachos_64bit/code/network/swtch.s"
        "Offline 4/nachos_64bit/code/test/halt.c"
        "Offline 4/nachos_64bit/code/test/Makefile"
        "Offline 4/nachos_64bit/code/test/matmult.c"
        "Offline 4/nachos_64bit/code/test/script"
        "Offline 4/nachos_64bit/code/test/shell.c"
        "Offline 4/nachos_64bit/code/test/sort.c"
        "Offline 4/nachos_64bit/code/test/start.c"
        "Offline 4/nachos_64bit/code/test/start.s"
        "Offline 4/nachos_64bit/code/threads/copyright.h"
        "Offline 4/nachos_64bit/code/threads/list.h"
        "Offline 4/nachos_64bit/code/threads/main.cc"
        "Offline 4/nachos_64bit/code/threads/Makefile"
        "Offline 4/nachos_64bit/code/threads/preemptive.cc"
        "Offline 4/nachos_64bit/code/threads/preemptive.h"
        "Offline 4/nachos_64bit/code/threads/scheduler.cc"
        "Offline 4/nachos_64bit/code/threads/scheduler.h"
        "Offline 4/nachos_64bit/code/threads/switch.h"
        "Offline 4/nachos_64bit/code/threads/switch.s"
        "Offline 4/nachos_64bit/code/threads/swtch.s"
        "Offline 4/nachos_64bit/code/threads/synch.cc"
        "Offline 4/nachos_64bit/code/threads/synch.h"
        "Offline 4/nachos_64bit/code/threads/synchlist.h"
        "Offline 4/nachos_64bit/code/threads/system.cc"
        "Offline 4/nachos_64bit/code/threads/system.h"
        "Offline 4/nachos_64bit/code/threads/thread.cc"
        "Offline 4/nachos_64bit/code/threads/thread.h"
        "Offline 4/nachos_64bit/code/threads/threadtest.cc"
        "Offline 4/nachos_64bit/code/threads/utility.cc"
        "Offline 4/nachos_64bit/code/threads/utility.h"
        "Offline 4/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 4/nachos_64bit/code/userprog/addrspace.h"
        "Offline 4/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 4/nachos_64bit/code/userprog/bitmap.h"
        "Offline 4/nachos_64bit/code/userprog/exception.cc"
        "Offline 4/nachos_64bit/code/userprog/Makefile"
        "Offline 4/nachos_64bit/code/userprog/memory_manager.cc"
        "Offline 4/nachos_64bit/code/userprog/memory_manager.h"
        "Offline 4/nachos_64bit/code/userprog/progtest.cc"
        "Offline 4/nachos_64bit/code/userprog/swtch.s"
        "Offline 4/nachos_64bit/code/userprog/syscall.h"
        "Offline 4/nachos_64bit/code/vm/Makefile"
        "Offline 4/nachos_64bit/code/vm/swtch.s"
        "Offline 4/nachos_64bit/code/Makefile"
        "Offline 4/nachos_64bit/code/Makefile.common"
        "Offline 4/nachos_64bit/code/Makefile.dep"
        CMakeLists.txt
        README.md)
