cmake_minimum_required(VERSION 3.9)
project(Nachos_Offline)

set(CMAKE_CXX_STANDARD 11)

add_executable(Nachos_Offline
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/Nachos_Offline.cbp
        "Offline 1/nachos_64bit/code/bin/coff.h"
        "Offline 1/nachos_64bit/code/bin/coff2flat.c"
        "Offline 1/nachos_64bit/code/bin/coff2noff.c"
        "Offline 1/nachos_64bit/code/bin/d.c"
        "Offline 1/nachos_64bit/code/bin/disasm.c"
        "Offline 1/nachos_64bit/code/bin/encode.h"
        "Offline 1/nachos_64bit/code/bin/execute.c"
        "Offline 1/nachos_64bit/code/bin/instr.h"
        "Offline 1/nachos_64bit/code/bin/int.h"
        "Offline 1/nachos_64bit/code/bin/main.c"
        "Offline 1/nachos_64bit/code/bin/Makefile"
        "Offline 1/nachos_64bit/code/bin/noff.h"
        "Offline 1/nachos_64bit/code/bin/opstrings.c"
        "Offline 1/nachos_64bit/code/bin/out.c"
        "Offline 1/nachos_64bit/code/bin/system.c"
        "Offline 1/nachos_64bit/code/filesys/test/big"
        "Offline 1/nachos_64bit/code/filesys/test/medium"
        "Offline 1/nachos_64bit/code/filesys/test/small"
        "Offline 1/nachos_64bit/code/filesys/directory.cc"
        "Offline 1/nachos_64bit/code/filesys/directory.h"
        "Offline 1/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 1/nachos_64bit/code/filesys/filehdr.h"
        "Offline 1/nachos_64bit/code/filesys/filesys.cc"
        "Offline 1/nachos_64bit/code/filesys/filesys.h"
        "Offline 1/nachos_64bit/code/filesys/fstest.cc"
        "Offline 1/nachos_64bit/code/filesys/Makefile"
        "Offline 1/nachos_64bit/code/filesys/openfile.cc"
        "Offline 1/nachos_64bit/code/filesys/openfile.h"
        "Offline 1/nachos_64bit/code/filesys/swtch.s"
        "Offline 1/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 1/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 1/nachos_64bit/code/machine/console.cc"
        "Offline 1/nachos_64bit/code/machine/console.h"
        "Offline 1/nachos_64bit/code/machine/disk.cc"
        "Offline 1/nachos_64bit/code/machine/disk.h"
        "Offline 1/nachos_64bit/code/machine/interrupt.cc"
        "Offline 1/nachos_64bit/code/machine/interrupt.h"
        "Offline 1/nachos_64bit/code/machine/machine.cc"
        "Offline 1/nachos_64bit/code/machine/machine.h"
        "Offline 1/nachos_64bit/code/machine/mipssim.cc"
        "Offline 1/nachos_64bit/code/machine/mipssim.h"
        "Offline 1/nachos_64bit/code/machine/network.cc"
        "Offline 1/nachos_64bit/code/machine/network.h"
        "Offline 1/nachos_64bit/code/machine/stats.cc"
        "Offline 1/nachos_64bit/code/machine/stats.h"
        "Offline 1/nachos_64bit/code/machine/sysdep.cc"
        "Offline 1/nachos_64bit/code/machine/sysdep.h"
        "Offline 1/nachos_64bit/code/machine/timer.cc"
        "Offline 1/nachos_64bit/code/machine/timer.h"
        "Offline 1/nachos_64bit/code/machine/translate.cc"
        "Offline 1/nachos_64bit/code/machine/translate.h"
        "Offline 1/nachos_64bit/code/network/Makefile"
        "Offline 1/nachos_64bit/code/network/nettest.cc"
        "Offline 1/nachos_64bit/code/network/post.cc"
        "Offline 1/nachos_64bit/code/network/post.h"
        "Offline 1/nachos_64bit/code/network/README"
        "Offline 1/nachos_64bit/code/network/swtch.s"
        "Offline 1/nachos_64bit/code/test/halt.c"
        "Offline 1/nachos_64bit/code/test/Makefile"
        "Offline 1/nachos_64bit/code/test/matmult.c"
        "Offline 1/nachos_64bit/code/test/script"
        "Offline 1/nachos_64bit/code/test/shell.c"
        "Offline 1/nachos_64bit/code/test/sort.c"
        "Offline 1/nachos_64bit/code/test/start.s"
        "Offline 1/nachos_64bit/code/threads/buffer.h"
        "Offline 1/nachos_64bit/code/threads/consumer.cc"
        "Offline 1/nachos_64bit/code/threads/consumer.h"
        "Offline 1/nachos_64bit/code/threads/copyright.h"
        "Offline 1/nachos_64bit/code/threads/list.h"
        "Offline 1/nachos_64bit/code/threads/main.cc"
        "Offline 1/nachos_64bit/code/threads/Makefile"
        "Offline 1/nachos_64bit/code/threads/preemptive.cc"
        "Offline 1/nachos_64bit/code/threads/preemptive.h"
        "Offline 1/nachos_64bit/code/threads/producer.cc"
        "Offline 1/nachos_64bit/code/threads/producer.h"
        "Offline 1/nachos_64bit/code/threads/scheduler.cc"
        "Offline 1/nachos_64bit/code/threads/scheduler.h"
        "Offline 1/nachos_64bit/code/threads/switch.h"
        "Offline 1/nachos_64bit/code/threads/switch.s"
        "Offline 1/nachos_64bit/code/threads/swtch.s"
        "Offline 1/nachos_64bit/code/threads/synch.cc"
        "Offline 1/nachos_64bit/code/threads/synch.h"
        "Offline 1/nachos_64bit/code/threads/synchlist.h"
        "Offline 1/nachos_64bit/code/threads/system.cc"
        "Offline 1/nachos_64bit/code/threads/system.h"
        "Offline 1/nachos_64bit/code/threads/thread.cc"
        "Offline 1/nachos_64bit/code/threads/thread.h"
        "Offline 1/nachos_64bit/code/threads/threadtest.cc"
        "Offline 1/nachos_64bit/code/threads/utility.cc"
        "Offline 1/nachos_64bit/code/threads/utility.h"
        "Offline 1/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 1/nachos_64bit/code/userprog/addrspace.h"
        "Offline 1/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 1/nachos_64bit/code/userprog/bitmap.h"
        "Offline 1/nachos_64bit/code/userprog/exception.cc"
        "Offline 1/nachos_64bit/code/userprog/Makefile"
        "Offline 1/nachos_64bit/code/userprog/progtest.cc"
        "Offline 1/nachos_64bit/code/userprog/swtch.s"
        "Offline 1/nachos_64bit/code/userprog/syscall.h"
        "Offline 1/nachos_64bit/code/vm/Makefile"
        "Offline 1/nachos_64bit/code/vm/swtch.s"
        "Offline 1/nachos_64bit/code/Makefile"
        "Offline 1/nachos_64bit/code/Makefile.common"
        "Offline 1/nachos_64bit/code/Makefile.dep"
        "Offline 2/nachos_64bit/code/bin/coff.h"
        "Offline 2/nachos_64bit/code/bin/coff2flat.c"
        "Offline 2/nachos_64bit/code/bin/coff2noff.c"
        "Offline 2/nachos_64bit/code/bin/d.c"
        "Offline 2/nachos_64bit/code/bin/disasm.c"
        "Offline 2/nachos_64bit/code/bin/encode.h"
        "Offline 2/nachos_64bit/code/bin/execute.c"
        "Offline 2/nachos_64bit/code/bin/instr.h"
        "Offline 2/nachos_64bit/code/bin/int.h"
        "Offline 2/nachos_64bit/code/bin/main.c"
        "Offline 2/nachos_64bit/code/bin/Makefile"
        "Offline 2/nachos_64bit/code/bin/noff.h"
        "Offline 2/nachos_64bit/code/bin/opstrings.c"
        "Offline 2/nachos_64bit/code/bin/out.c"
        "Offline 2/nachos_64bit/code/bin/system.c"
        "Offline 2/nachos_64bit/code/filesys/test/big"
        "Offline 2/nachos_64bit/code/filesys/test/medium"
        "Offline 2/nachos_64bit/code/filesys/test/small"
        "Offline 2/nachos_64bit/code/filesys/directory.cc"
        "Offline 2/nachos_64bit/code/filesys/directory.h"
        "Offline 2/nachos_64bit/code/filesys/filehdr.cc"
        "Offline 2/nachos_64bit/code/filesys/filehdr.h"
        "Offline 2/nachos_64bit/code/filesys/filesys.cc"
        "Offline 2/nachos_64bit/code/filesys/filesys.h"
        "Offline 2/nachos_64bit/code/filesys/fstest.cc"
        "Offline 2/nachos_64bit/code/filesys/Makefile"
        "Offline 2/nachos_64bit/code/filesys/openfile.cc"
        "Offline 2/nachos_64bit/code/filesys/openfile.h"
        "Offline 2/nachos_64bit/code/filesys/swtch.s"
        "Offline 2/nachos_64bit/code/filesys/synchdisk.cc"
        "Offline 2/nachos_64bit/code/filesys/synchdisk.h"
        "Offline 2/nachos_64bit/code/machine/console.cc"
        "Offline 2/nachos_64bit/code/machine/console.h"
        "Offline 2/nachos_64bit/code/machine/disk.cc"
        "Offline 2/nachos_64bit/code/machine/disk.h"
        "Offline 2/nachos_64bit/code/machine/interrupt.cc"
        "Offline 2/nachos_64bit/code/machine/interrupt.h"
        "Offline 2/nachos_64bit/code/machine/machine.cc"
        "Offline 2/nachos_64bit/code/machine/machine.h"
        "Offline 2/nachos_64bit/code/machine/mipssim.cc"
        "Offline 2/nachos_64bit/code/machine/mipssim.h"
        "Offline 2/nachos_64bit/code/machine/network.cc"
        "Offline 2/nachos_64bit/code/machine/network.h"
        "Offline 2/nachos_64bit/code/machine/stats.cc"
        "Offline 2/nachos_64bit/code/machine/stats.h"
        "Offline 2/nachos_64bit/code/machine/sysdep.cc"
        "Offline 2/nachos_64bit/code/machine/sysdep.h"
        "Offline 2/nachos_64bit/code/machine/timer.cc"
        "Offline 2/nachos_64bit/code/machine/timer.h"
        "Offline 2/nachos_64bit/code/machine/translate.cc"
        "Offline 2/nachos_64bit/code/machine/translate.h"
        "Offline 2/nachos_64bit/code/network/Makefile"
        "Offline 2/nachos_64bit/code/network/nettest.cc"
        "Offline 2/nachos_64bit/code/network/post.cc"
        "Offline 2/nachos_64bit/code/network/post.h"
        "Offline 2/nachos_64bit/code/network/README"
        "Offline 2/nachos_64bit/code/network/swtch.s"
        "Offline 2/nachos_64bit/code/test/halt.c"
        "Offline 2/nachos_64bit/code/test/Makefile"
        "Offline 2/nachos_64bit/code/test/matmult.c"
        "Offline 2/nachos_64bit/code/test/script"
        "Offline 2/nachos_64bit/code/test/shell.c"
        "Offline 2/nachos_64bit/code/test/sort.c"
        "Offline 2/nachos_64bit/code/test/start.c"
        "Offline 2/nachos_64bit/code/test/start.s"
        "Offline 2/nachos_64bit/code/threads/copyright.h"
        "Offline 2/nachos_64bit/code/threads/list.h"
        "Offline 2/nachos_64bit/code/threads/main.cc"
        "Offline 2/nachos_64bit/code/threads/Makefile"
        "Offline 2/nachos_64bit/code/threads/preemptive.cc"
        "Offline 2/nachos_64bit/code/threads/preemptive.h"
        "Offline 2/nachos_64bit/code/threads/scheduler.cc"
        "Offline 2/nachos_64bit/code/threads/scheduler.h"
        "Offline 2/nachos_64bit/code/threads/switch.h"
        "Offline 2/nachos_64bit/code/threads/switch.s"
        "Offline 2/nachos_64bit/code/threads/swtch.s"
        "Offline 2/nachos_64bit/code/threads/synch.cc"
        "Offline 2/nachos_64bit/code/threads/synch.h"
        "Offline 2/nachos_64bit/code/threads/synchlist.h"
        "Offline 2/nachos_64bit/code/threads/system.cc"
        "Offline 2/nachos_64bit/code/threads/system.h"
        "Offline 2/nachos_64bit/code/threads/thread.cc"
        "Offline 2/nachos_64bit/code/threads/thread.h"
        "Offline 2/nachos_64bit/code/threads/threadtest.cc"
        "Offline 2/nachos_64bit/code/threads/utility.cc"
        "Offline 2/nachos_64bit/code/threads/utility.h"
        "Offline 2/nachos_64bit/code/userprog/addrspace.cc"
        "Offline 2/nachos_64bit/code/userprog/addrspace.h"
        "Offline 2/nachos_64bit/code/userprog/bitmap.cc"
        "Offline 2/nachos_64bit/code/userprog/bitmap.h"
        "Offline 2/nachos_64bit/code/userprog/exception.cc"
        "Offline 2/nachos_64bit/code/userprog/Makefile"
        "Offline 2/nachos_64bit/code/userprog/memory_manager.cc"
        "Offline 2/nachos_64bit/code/userprog/memory_manager.h"
        "Offline 2/nachos_64bit/code/userprog/progtest.cc"
        "Offline 2/nachos_64bit/code/userprog/swtch.s"
        "Offline 2/nachos_64bit/code/userprog/syscall.h"
        "Offline 2/nachos_64bit/code/vm/Makefile"
        "Offline 2/nachos_64bit/code/vm/swtch.s"
        "Offline 2/nachos_64bit/code/Makefile"
        "Offline 2/nachos_64bit/code/Makefile.common"
        "Offline 2/nachos_64bit/code/Makefile.dep"
        CMakeLists.txt
        README.md "Offline 2/nachos_64bit/code/test/array.c" "Offline 2/nachos_64bit/code/userprog/table.h" "Offline 2/nachos_64bit/code/userprog/table.cc" "Offline 2/nachos_64bit/code/userprog/spaceid_generator.cc" "Offline 2/nachos_64bit/code/userprog/spaceid_generator.h" "Offline 2/nachos_64bit/code/test/newtest.c")
